# rust-renderer

./: Cargo.toml
examples/buffers/: main.rs  scene.rs
examples/buffers/shader/: my.vert
examples/changing_color/: main.rs
examples/cube/: main.rs  scene.rs
examples/cube/shader/: my_vert.spv
examples/diffuse_maps/: camera_controller.rs  main.rs  texture.rs
examples/diffuse_maps/shader/: my.vert  my_vert.spv
examples/iced_triangle/: main.rs  scene.rs
examples/iced_triangle/shader/: challenge.vert  challenge_frag.spv  challenge_vert.spv  my.frag  my.vert  my_vert.spv
examples/triangle/: main.rs  scene.rs
examples/triangle/shader/: my.vert  my_vert.spv  shader.spv
examples/window/: main.rs
