[package]
name = "rust-renderer"
version = "0.1.0"
authors = ["Anton Zelenin <ntnzelenin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
iced = { path = "/home/anton/Documents/other_repos/iced"}
iced_winit = { path = "/home/anton/Documents/other_repos/iced/winit" }
iced_wgpu = { path = "/home/anton/Documents/other_repos/iced/wgpu" }
shaderc = "0.6.2"
bytemuck = "1.2.0"
failure = "0.1"
image = "0.23.6"
winit = "0.22.2"
wgpu = "0.5.0"
futures = "0.3.5"
